--- a/templates/accounts/account_info.html
+++ b/templates/accounts/account_info.html
@@ -3,7 +3,7 @@
 
 {% block content %}
     <h1>Profil</h1>
-    <p>Nom : {{ user.nom }}</p>
+    <p>Nom : {{ user.first_name }} {{ user.last_name }}</p>
     <p>Mail : {{ user.mail }}</p>
     <p>Adresse : {{ user.adresse}}</p>
 {% endblock %}
