--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block title %}Shop Django{% endblock %}</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
     <nav>
@@ -21,14 +22,16 @@
       </ul>
     </nav>
 
-    <div class="content">
+    <div class="container my-5">
       {% block content %}
       <!-- Contenu de chaque page -->
       {% endblock %}
     </div>
 
     <footer>
-      <p>Django shop - 2024</p>
+      <p class="text-center mb-5">Django shop - 2024</p>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
   </body>
 </html>
