--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -2,13 +2,14 @@
 {% block title %}Connexion{% endblock %}
 
 {% block content %}
-<h2>Connexion</h2>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Se connecter</button>
-</form>
+<div class="container mt-5">
+    <h2 class="mb-4">Connexion</h2>
+    <form method="post" class="form-group">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit" class="btn btn-primary">Se connecter</button>
+    </form>
 
-<p>Pas de compte ? <a href="{% url 'signup' %}">Inscrivez-vous ici</a></p>
-
+    <p class="mt-3">Pas de compte ? <a href="{% url 'signup' %}">Inscrivez-vous ici</a></p>
+</div>
 {% endblock %}
