--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -2,11 +2,13 @@
 {% block title %}Inscription{% endblock %}
 
 {% block content %}
-<h2>Créer un compte</h2>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">S'inscrire</button>
-</form>
-
+<div class="container mt-5">
+    <h2 class="mb-4">Créer un compte</h2>
+    <form method="post" class="form-group">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit" class="btn btn-primary">S'inscrire</button>
+    </form>
+</div>
 {% endblock %}
+
