--- a/templates/shop/article_detail.html
+++ b/templates/shop/article_detail.html
@@ -4,10 +4,10 @@
 
 {% block content %}
     <h1 class="text-center mb-5">{{ article.nom }}</h1>
-    <p>Catégorie : {{ article.categorie.nom }}</p>
-    <p>Montant : {{ article.montant }}</p>
+    <p>Catégorie : {{ article.categorie_id.nom }}</p>
+    <p>Montant : {{ article.prix }} €</p>
     <p>{{ article.description }}</p>
 
-    <a href="#">Ajout</a> |
+    <a href="#">Ajouter au panier</a> |
 
 {% endblock %}
