--- a/templates/shop/article_list.html
+++ b/templates/shop/article_list.html
@@ -13,7 +13,7 @@
                     <div class="card-body">
                         <h5 class="card-title">{{ article.nom }}</h5>
                         <p class="card-text">{{ article.description|truncatewords:20 }}</p>
-                        <h6 class="card-subtitle mb-2 text-muted">Price: ${{ article.price }}</h6>
+                        <h6 class="card-subtitle mb-2 text-muted">Prix: {{ article.prix }} €</h6>
                         <a href="{% url 'article_detail' article.id %}" class="btn btn-primary">Voir le détail</a>
                     </div>
                 </div>
