submit of a cart

--- a/templates/shop/article_detail.html
+++ b/templates/shop/article_detail.html
@@ -13,7 +13,9 @@
        data-nom="{{ article.nom }}" 
        data-categorie="{{ article.categorie_id.nom }}" 
        data-prix="{{ article.prix }}" 
-       data-description="{{ article.description }}">
+       data-description="{{ article.description }}"
+       data-id="{{ article.id }}"
+       >
        Ajouter au panier
     </a>
 
