--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,12 @@
             <li class="nav-item">
               <a class="nav-link" href="/cart">Panier <span id="cart-count"></span></a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/cart/factures/">Commandes</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/cart">Panier <span id="cart-count"></span></a>
+            </li>
           </ul>
           <ul class="navbar-nav ms-auto">
             {% if user.is_authenticated %}
