--- a/templates/cart/user_factures.html
+++ b/templates/cart/user_factures.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="container mt-5">
-    <h1 class="text-center mb-5">Vos Factures</h1>
+    <h1 class="text-center mb-5">Vos Commmandes</h1>
     <ul class="list-group">
         {% for facture in factures %}
             <li class="list-group-item">
